@@ -21,10 +21,10 @@ public class TitleQueue {
     @SubscribeEvent
     static public void ServerTick(TickEvent.ServerTickEvent tick) {
         if (tick.phase == TickEvent.Phase.END) {
-            if (titleQueue.size() > 0) {
+            if (!titleQueue.isEmpty()) {
                 if (titleTime <= 0) {
-                    QueuedTitle title = titleQueue.get(0);
-                    titleQueue.remove(0);
+                    QueuedTitle title = titleQueue.getFirst();
+                    titleQueue.removeFirst();
                     titleTime = title.getTicks();
                     title.sendTitle();
                 }
@@ -37,5 +37,9 @@ public class TitleQueue {
 
     public static void queueTitle(QueuedTitle queuedTitle) {
         titleQueue.add(queuedTitle);
+    }
+
+    public static void ClearQueue() {
+        titleQueue.clear();
     }
 }
